null check and https -> http in link

--- a/timestamp-microservice/index.html
+++ b/timestamp-microservice/index.html
@@ -18,7 +18,7 @@
             </blockquote>
             <h3>Example usage:</h3>
             <code>http://timestamp-ms.shubhampandey.in/September%2015,%202017</code><br>
-            <code>https://timestamp-ms.shubhampandey.in/1505495746</code>
+            <code>http://timestamp-ms.shubhampandey.in/1505495746</code>
             <h3>Example output:</h3>
             <code>
                 {
